--- a/pages/school/board/detail.wxml
+++ b/pages/school/board/detail.wxml
@@ -13,7 +13,7 @@
     <view class="cu-item shadow">
       <view class="cu-list menu-avatar">
         <view class="cu-item">
-          <view class="cu-avatar round lg bg-cyan margin-xs"><text class="avatar-text">匿名</text></view>
+          <view class="cu-avatar round lg bg-cyan"><text class="avatar-text">匿名</text></view>
           <view class="content flex-sub">
             <view>匿名用户</view>
             <view class="text-gray text-sm flex justify-between">{{data.content.created_at}}</view>
@@ -59,7 +59,7 @@
       <view class="cu-item shadow solid-bottom" wx:for="{{data.replay}}" wx:key="board">
         <view class="cu-list menu-avatar">
           <view class="cu-item">
-            <view class="cu-avatar round lg bg-cyan margin-xs" style="background-image:url(https://upload-images.jianshu.io/upload_images/4697920-34dcb56de71f8967.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/256);"></view>
+            <view class="cu-avatar round lg bg-cyan" style="background-image:url(https://upload-images.jianshu.io/upload_images/4697920-34dcb56de71f8967.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/128);"></view>
             <view class="content flex-sub">
               <view>权益中心工作人员 - {{item.nickname}}</view>
               <view class="text-gray text-sm flex justify-between">{{item.created_at}}</view>
