--- a/pages/school/board/index.wxml
+++ b/pages/school/board/index.wxml
@@ -42,7 +42,7 @@
       <view class="cu-item shadow">
         <view class="cu-list menu-avatar">
           <view class="cu-item">
-            <view class="cu-avatar round lg bg-cyan margin-xs"><text class="avatar-text">匿名</text></view>
+            <view class="cu-avatar round lg bg-cyan"><text class="avatar-text">匿名</text></view>
             <view class="content flex-sub">
               <view>匿名用户</view>
               <view class="text-gray text-sm flex justify-between">{{item.created_at}}</view>
@@ -58,13 +58,13 @@
           </view>
         </view>
         <view class="cu-list menu sm-border">
-          <navigator url="./detail?id={{item.id}}" class="cu-item arrow">
+          <view class="cu-item arrow">
             <view class="content"><text class="">查看详情</text></view>
             <view class="action">
               <button wx:if="{{isAdminer}}" class="cu-btn round bg-red shadow" data-id="{{item.id}}" catchtap="deleteConfirm">
                 <text class="cuIcon-delete"></text> 删除</button>
             </view>
-          </navigator>
+          </view>
         </view>
       </view>
     </navigator>
