--- a/pages/school/todayschool.wxml
+++ b/pages/school/todayschool.wxml
@@ -2,7 +2,7 @@
 <cu-custom bgColor="bg-white" isCustom="{{true}}">
   <view slot="content">http://ehall.bkty.top/...</view>
 </cu-custom>
-<view class="padding--top-xl margin-top-xl bg-white">
+<view class="margin-top-xl bg-white" wx:if="{{confirmed}}">
   <view class="text-center padding-xl margin-xl">
     <view class="padding-sm" style="font-size: 150px;">
       <text class="cuIcon-roundcheckfill" style="color:{{color}};"></text>
@@ -11,8 +11,8 @@
   </view>
 </view>
 
-<view class="padding-lr">
-  <view class="content padding-sm" style="color:{{color}}">
+<view class="padding-lr {{confirmed ? '' : 'padding-top-xl margin-top-xl'}}">
+  <view class="content padding-sm {{confirmed ? '' : 'padding-top-xl margin-top-xl'}}" style="color:{{color}}">
     <view class="flex padding-tb-xs">
       <view class="basis-xxs"><text class="text-lg text-black text-bold">姓名：</text></view>
       <view><text class="text-lg text-black text-bold">{{userinfo.name}}</text></view>
@@ -25,9 +25,18 @@
       <view class="basis-xxs"><text class="text-lg text-black text-bold">通行区域：</text></view>
       <view bindtap="changeArea"><text class="text-lg text-black">{{area}}</text></view>
     </view>
-    <view class="flex padding-tb-xs">
+    <view class="flex padding-tb-xs" wx:if="{{confirmed}}">
       <view class="basis-xxs"><text class="text-lg text-black text-bold">通行时间：</text></view>
       <view><text class="text-lg text-black">{{timeText}}</text></view>
     </view>
+  </view>
+</view>
+
+<view class="padding-lr margin" wx:if="{{!confirmed}}">
+  <view class="text-center" wx:if="{{text == '进校验证通过'}}" bindtap="confirm">
+    <image src="{{inConfirmBtn}}" mode="aspectFit" style="width:160px;height:60px;"/>
+  </view>
+  <view class="text-center" wx:if="{{text == '出校验证通过'}}" bindtap="confirm">
+    <image src="{{outConfirmBtn}}" mode="aspectFit" style="width:160px;height:60px;"/>
   </view>
 </view>
