--- a/pages/index/feature.wxml
+++ b/pages/index/feature.wxml
@@ -1,18 +1,11 @@
 <!--pages/index/feature.wxml-->
 <scroll-view scroll-y class="scrollPage">
-  <view class="UCenter-bg">
+  <view class="UCenter-bg" style="background-image: url({{backgroundImage}});">
     <view class="userinfo-avatar shadow-blur">
       <open-data type="userAvatarUrl"></open-data>
     </view>
-    <view class="text-xl line-black">
-      <open-data type="userNickName"></open-data>
-    </view>
-    <view class="margin-top-sm" wx:if="{{hasEdusysStorage}}">
-      <text class="line-black">{{edusysUserInfo.uid}}</text>
-    </view>
-    <view class="margin-top-sm" wx:else>
-      <text class="line-black">您尚未登录</text>
-    </view>
+    <view class="margin-top-sm nickname" wx:if="{{hasEdusysStorage}}">{{edusysUserInfo.uid}}</view>
+    <view class="margin-top-sm nickname" bindtap="goLogin" wx:else><open-data type="userNickName"></open-data>您尚未登录</view>
     <image src="https://upload-images.jianshu.io/upload_images/4697920-0b3859b5e4ef17ec.gif" mode="scaleToFill"
       class="gif-wave"></image>
   </view>
