--- a/utils/iconfont.wxss
+++ b/utils/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2595220 */
-  src: url('//at.alicdn.com/t/font_2595220_999f1jg01ks.woff2?t=1622973388757') format('woff2'),
-       url('//at.alicdn.com/t/font_2595220_999f1jg01ks.woff?t=1622973388757') format('woff'),
-       url('//at.alicdn.com/t/font_2595220_999f1jg01ks.ttf?t=1622973388757') format('truetype');
+  src: url('//at.alicdn.com/t/font_2595220_ydmzrpc0j6.woff2?t=1626330557400') format('woff2'),
+       url('//at.alicdn.com/t/font_2595220_ydmzrpc0j6.woff?t=1626330557400') format('woff'),
+       url('//at.alicdn.com/t/font_2595220_ydmzrpc0j6.ttf?t=1626330557400') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-yu:before {
+  content: "\e607";
 }
 
 .icon-biye:before {
