--- a/pages/index/feature.wxml
+++ b/pages/index/feature.wxml
@@ -22,10 +22,10 @@
       <view class="text-center"><image src="https://upload-images.jianshu.io/upload_images/4697920-34dcb56de71f8967.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/64" class="replay-board"/></view>
       <view class="replay-board-text" style="color: #888;">投诉维权</view>
     </view>
-    <view class="cu-item" bindtap="showQQGroupCode">
+    <!-- <view class="cu-item" bindtap="showQQGroupCode">
       <view><text class="cuIcon-community" style="color:#84BD54;font-size:32px;margin-top:5px;"></text></view>
       <text>使用帮助</text>
-    </view>
+    </view> -->
   </view>
 
   <view class="padding flex flex-direction">
