--- a/pages/school/run/index.wxml
+++ b/pages/school/run/index.wxml
@@ -1,4 +1,5 @@
 <!--pages/school/run/index.wxml-->
+<block wx:if="{{app.globalData.env == 'release'}}">
 <cu-custom bgColor="bg-purple" isCustom="{{true}}">
   <view slot="content">步数排行 - 贝壳小盒子</view>
 </cu-custom>
@@ -70,3 +71,8 @@
     <button class="cu-btn bg-red round shadow-blur" open-type="share">分享</button>
   </view>
 </view>
+
+</block>
+<block wx:else>
+  <view class="margin"><tips tipsText="应官方审核要求，此功能已下线"></tips></view>
+</block>
